stage1/manifests/03-rocketchat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  namespace: rocketchat
  labels:
    app: rocketchat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - mongo
              topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      containers:
        - name: rocketchat
          image: rocket.chat:2.4.9
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rocketchat
  namespace: rocketchat
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: rocketchat
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rocketchat
  namespace: rocketchat
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: rocket-chat
    weight: 100
  wildcardPolicy: None
